--- a/git/hello.html
+++ b/git/hello.html
@@ -1,11 +1,14 @@
-<html>
-    <head>
-        <title>website</title>
-        <link href="./hello.css" rel="stylesheet">
-    </head>
-    <body>
-        <div id="hello">
-            Hello, World!!!
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="kor">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello World</title>
+</head>
+<body>
+    <div>
+        Hello, World!
+    </div>
+</body>
 </html>
